[package]
name = "form_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
validator = { version = "0.16.0", features = ["derive"] }
serde = {version = "1.0.157" , features = ["derive"]}
derive_more = "0.99.17"
anyhow = "1.0.70"
regex = "1.7.1"
